Added link to shopify

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 	</head>
 	<body>
 		<header>
-			<img
-				id="shopify-icon"
-				src="https://crushingit.tech/hackathon-assets/shopify-icon.svg"
-				alt="shopify-icon"
-			/>
+			<a href="https://www.shopify.com">
+				<img
+					id="shopify-icon"
+					src="https://crushingit.tech/hackathon-assets/shopify-icon.svg"
+					alt="shopify-icon"
+				/>
+			</a>
 			<div class="search">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
@@ -53,6 +55,7 @@
 			</div>
 			<div class="menu fontsize-12 fontweight-500">DC</div>
 		</header>
+		<main></main>
 		<script src="./app.js"></script>
 	</body>
 </html>
