Setup Guide started. Fixed Search input height

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="./app.css" />
 	</head>
 	<body>
+		<!-- HEADER SECTION -->
 		<header>
 			<a href="https://www.shopify.com">
 				<img
@@ -55,6 +56,7 @@
 			</div>
 			<div class="menu fontsize-12 fontweight-500">DC</div>
 		</header>
+		<!-- MAIN SECTION -->
 		<main>
 			<div class="trial-callout-container">
 				<div class="trial-callout-details">
@@ -78,6 +80,32 @@
 							fill="#fff"
 						/>
 					</svg>
+				</div>
+			</div>
+			<!-- SETUP GUIDE SECTION -->
+			<div class="setup-guide-container">
+				<div class="inner-guide">
+					<div class="setup-guide-details">
+						<h1 class="fontweight-600 fontsize-14">Setup guide</h1>
+						<p class="fontsize-13 fontweight-400">
+							Use this personalized guide to get your store up and running.
+						</p>
+						<div class="completed">
+							<p class="fontsize-12 fontweight-400">1 / 5 completed</p>
+							<progress
+								class="setup-guide-progress-bar"
+								id="completed"
+								value="1"
+								max="5"
+							></progress>
+						</div>
+					</div>
+					<div id="setup-guide-toggle">
+						<img
+							src="https://crushingit.tech/hackathon-assets/icon-arrow-down.svg"
+							alt=""
+						/>
+					</div>
 				</div>
 			</div>
 		</main>
