Added toggle to setup guide

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 					</div>
 					<div id="setup-guide-toggle">
 						<img
+							data-num="0"
+							class="active"
 							src="https://crushingit.tech/hackathon-assets/icon-arrow-down.svg"
 							alt=""
 						/>
