--- a/index.html
+++ b/index.html
@@ -108,6 +108,139 @@
 						/>
 					</div>
 				</div>
+				<ul>
+					<li>
+						<div class="option-container">
+							<div class="guide-option">
+								<div class="option-header">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="24"
+										height="24"
+										viewBox="0 0 32 32"
+										fill="#fff"
+									>
+										<circle
+											cx="16"
+											cy="16"
+											r="12"
+											stroke="#8a8a8a"
+											stroke-width="2.5"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-dasharray="4 6"
+										/>
+									</svg>
+								</div>
+							</div>
+							<div class="guide-option-right">
+								Customize your online store
+								<div class="option-details">
+									<p>
+										Choose a theme and add your logo, colors, and images to
+										reflect your brand.
+									</p>
+									<a
+										href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes"
+										>Learn more</a
+									>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="guide-option">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 32 32"
+								fill="#fff"
+							>
+								<circle
+									cx="16"
+									cy="16"
+									r="12"
+									stroke="#8a8a8a"
+									stroke-width="2.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-dasharray="4 6"
+								/>
+							</svg>
+						</div>
+						Add your first product
+					</li>
+					<li>
+						<div class="guide-option">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 32 32"
+								fill="#fff"
+							>
+								<circle
+									cx="16"
+									cy="16"
+									r="12"
+									stroke="#8a8a8a"
+									stroke-width="2.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-dasharray="4 6"
+								/>
+							</svg>
+						</div>
+						Add a custom domain
+					</li>
+					<li>
+						<div class="guide-option">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 32 32"
+								fill="#fff"
+							>
+								<circle
+									cx="16"
+									cy="16"
+									r="12"
+									stroke="#8a8a8a"
+									stroke-width="2.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-dasharray="4 6"
+								/>
+							</svg>
+						</div>
+						Name your store
+					</li>
+					<li>
+						<div class="guide-option">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 32 32"
+								fill="#fff"
+							>
+								<circle
+									cx="16"
+									cy="16"
+									r="12"
+									stroke="#8a8a8a"
+									stroke-width="2.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-dasharray="4 6"
+								/>
+							</svg>
+						</div>
+						Set up a payment provider
+					</li>
+				</ul>
 			</div>
 		</main>
 		<script src="./app.js"></script>
