First option complete

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										width="24"
 										height="24"
 										viewBox="0 0 32 32"
-										fill="#fff"
+										fill="#f3f3f3"
 									>
 										<circle
 											cx="16"
@@ -139,12 +139,15 @@
 									<p>
 										Choose a theme and add your logo, colors, and images to
 										reflect your brand.
+										<a
+											href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes"
+											>Learn more</a
+										>
 									</p>
-									<a
-										href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes"
-										>Learn more</a
-									>
 								</div>
+								<button class="customize-theme fontsize-12 fontweight-600">
+									Customize theme
+								</button>
 							</div>
 						</div>
 					</li>
