--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						/>
 					</div>
 				</div>
-				<ul>
+				<ul id="guide-list">
 					<li>
 						<div class="option-container">
 							<div class="guide-option">
@@ -145,103 +145,183 @@
 										>
 									</p>
 								</div>
-								<button class="customize-theme fontsize-12 fontweight-600">
+								<button class="option-button fontsize-12 fontweight-600">
 									Customize theme
 								</button>
 							</div>
 						</div>
 					</li>
 					<li>
-						<div class="guide-option">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="24"
-								height="24"
-								viewBox="0 0 32 32"
-								fill="#fff"
-							>
-								<circle
-									cx="16"
-									cy="16"
-									r="12"
-									stroke="#8a8a8a"
-									stroke-width="2.5"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-dasharray="4 6"
-								/>
-							</svg>
+						<div class="option-container">
+							<div class="guide-option">
+								<div class="option-header">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="24"
+										height="24"
+										viewBox="0 0 32 32"
+										fill="#f3f3f3"
+									>
+										<circle
+											cx="16"
+											cy="16"
+											r="12"
+											stroke="#8a8a8a"
+											stroke-width="2.5"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-dasharray="4 6"
+										/>
+									</svg>
+								</div>
+							</div>
+							<div class="guide-option-right">
+								Add your first product
+								<div class="option-details">
+									<p>
+										Write a description, add photos, and set pricing for the
+										products you plan to sell.
+										<a
+											href="https://help.shopify.com/en/manual/products/add-update-products"
+											>Learn more</a
+										>
+									</p>
+								</div>
+								<button class="option-button fontsize-12 fontweight-600">
+									Add product
+								</button>
+								<button
+									class="option-button button-link fontweight-600 fontsize-12"
+								>
+									Import product
+								</button>
+							</div>
 						</div>
-						Add your first product
 					</li>
 					<li>
-						<div class="guide-option">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="24"
-								height="24"
-								viewBox="0 0 32 32"
-								fill="#fff"
-							>
-								<circle
-									cx="16"
-									cy="16"
-									r="12"
-									stroke="#8a8a8a"
-									stroke-width="2.5"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-dasharray="4 6"
-								/>
-							</svg>
+						<div class="option-container">
+							<div class="guide-option">
+								<div class="option-header">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="24"
+										height="24"
+										viewBox="0 0 32 32"
+										fill="#f3f3f3"
+									>
+										<circle
+											cx="16"
+											cy="16"
+											r="12"
+											stroke="#8a8a8a"
+											stroke-width="2.5"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-dasharray="4 6"
+										/>
+									</svg>
+								</div>
+							</div>
+							<div class="guide-option-right">
+								Add a custom domain
+								<div class="option-details">
+									<p>
+										Your current domain is 222219.myshopify.com but you can add
+										a custom domain to help customers find your online store.
+										<a href="https://help.shopify.com/en/manual/domains"
+											>Learn more</a
+										>
+									</p>
+								</div>
+								<button class="option-button fontsize-12 fontweight-600">
+									Add domain
+								</button>
+							</div>
 						</div>
-						Add a custom domain
 					</li>
 					<li>
-						<div class="guide-option">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="24"
-								height="24"
-								viewBox="0 0 32 32"
-								fill="#fff"
-							>
-								<circle
-									cx="16"
-									cy="16"
-									r="12"
-									stroke="#8a8a8a"
-									stroke-width="2.5"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-dasharray="4 6"
-								/>
-							</svg>
+						<div class="option-container">
+							<div class="guide-option">
+								<div class="option-header">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="24"
+										height="24"
+										viewBox="0 0 32 32"
+										fill="#f3f3f3"
+									>
+										<circle
+											cx="16"
+											cy="16"
+											r="12"
+											stroke="#8a8a8a"
+											stroke-width="2.5"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-dasharray="4 6"
+										/>
+									</svg>
+								</div>
+							</div>
+							<div class="guide-option-right">
+								Name your store
+								<div class="option-details">
+									<p>
+										Your temporary store name is currently Davii collections.
+										The store name appears in your admin and your online store.
+										<a
+											href="https://help.shopify.com/en/manual/intro-to-shopify/initial-setup/setup-business-settings#set-or-change-your-online-store-name-and-legal-business-name"
+											>Learn more</a
+										>
+									</p>
+								</div>
+								<button class="option-button fontsize-12 fontweight-600">
+									Name store
+								</button>
+							</div>
 						</div>
-						Name your store
 					</li>
 					<li>
-						<div class="guide-option">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="24"
-								height="24"
-								viewBox="0 0 32 32"
-								fill="#fff"
-							>
-								<circle
-									cx="16"
-									cy="16"
-									r="12"
-									stroke="#8a8a8a"
-									stroke-width="2.5"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-dasharray="4 6"
-								/>
-							</svg>
+						<div class="option-container">
+							<div class="guide-option">
+								<div class="option-header">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="24"
+										height="24"
+										viewBox="0 0 32 32"
+										fill="#f3f3f3"
+									>
+										<circle
+											cx="16"
+											cy="16"
+											r="12"
+											stroke="#8a8a8a"
+											stroke-width="2.5"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-dasharray="4 6"
+										/>
+									</svg>
+								</div>
+							</div>
+							<div class="guide-option-right">
+								Setup up a payment provider
+								<div class="option-details">
+									<p>
+										Choose a payment provider to start accepting payments.
+										You'll need to create an account with the payment provider
+										and set it up with your Shopify store.
+										<a href="https://help.shopify.com/en/manual/payments"
+											>Learn more</a
+										>
+									</p>
+								</div>
+								<button class="option-button fontsize-12 fontweight-600">
+									Set up payment
+								</button>
+							</div>
 						</div>
-						Set up a payment provider
 					</li>
 				</ul>
 			</div>
