--- a/index.html
+++ b/index.html
@@ -109,219 +109,187 @@
 					</div>
 				</div>
 				<ul id="guide-list">
-					<li>
+					<li class="active-option">
 						<div class="option-container">
-							<div class="guide-option">
-								<div class="option-header">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										width="24"
-										height="24"
-										viewBox="0 0 32 32"
-										fill="#f3f3f3"
-									>
-										<circle
-											cx="16"
-											cy="16"
-											r="12"
-											stroke="#8a8a8a"
-											stroke-width="2.5"
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-dasharray="4 6"
-										/>
-									</svg>
-								</div>
-							</div>
-							<div class="guide-option-right">
-								Customize your online store
-								<div class="option-details">
-									<p>
-										Choose a theme and add your logo, colors, and images to
-										reflect your brand.
-										<a
-											href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes"
-											>Learn more</a
-										>
-									</p>
-								</div>
-								<button class="option-button fontsize-12 fontweight-600">
-									Customize theme
-								</button>
-							</div>
-						</div>
+                            <div class="option-header">
+                                <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                fill="#f3f3f3"
+                            >
+                                <circle
+                                    cx="16"
+                                    cy="16"
+                                    r="12"
+                                    stroke="#8a8a8a"
+                                    stroke-width="2.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-dasharray="4 6"
+                                />
+                            </svg>
+                            <p>Customize your online store</p>
+                        </div>
+                        <div class="option-details">
+                            <p>
+                                Choose a theme and add your logo, colors, and images to
+                                reflect your brand.
+                                <a
+                                    href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes"
+                                    >Learn more</a
+                                >
+                            </p>
+                            <button class="option-button fontsize-12 fontweight-600">
+                                Customize theme
+                            </button>
+                        </div>
 					</li>
 					<li>
 						<div class="option-container">
-							<div class="guide-option">
-								<div class="option-header">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										width="24"
-										height="24"
-										viewBox="0 0 32 32"
-										fill="#f3f3f3"
-									>
-										<circle
-											cx="16"
-											cy="16"
-											r="12"
-											stroke="#8a8a8a"
-											stroke-width="2.5"
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-dasharray="4 6"
-										/>
-									</svg>
-								</div>
-							</div>
-							<div class="guide-option-right">
-								Add your first product
-								<div class="option-details">
-									<p>
-										Write a description, add photos, and set pricing for the
-										products you plan to sell.
-										<a
-											href="https://help.shopify.com/en/manual/products/add-update-products"
-											>Learn more</a
-										>
-									</p>
-								</div>
-								<button class="option-button fontsize-12 fontweight-600">
-									Add product
-								</button>
-								<button
-									class="option-button button-link fontweight-600 fontsize-12"
-								>
-									Import product
-								</button>
-							</div>
-						</div>
+                            <div class="option-header">
+                                <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                fill="#f3f3f3"
+                            >
+                                <circle
+                                    cx="16"
+                                    cy="16"
+                                    r="12"
+                                    stroke="#8a8a8a"
+                                    stroke-width="2.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-dasharray="4 6"
+                                />
+                            </svg>
+                            <p>Add your first product</p>
+                        </div>
+                        <div class="option-details">
+                            <p>
+                                Write a description, add photos, and set pricing for the products you plan to sell.
+                                <a
+                                    href="https://help.shopify.com/en/manual/products/add-update-products"
+                                    >Learn more</a
+                                >
+                            </p>
+                            <button class="option-button fontsize-12 fontweight-600">
+                                Add product
+                            </button>
+                            <button class="option-button button-link">Import product</button>
+                        </div>
 					</li>
 					<li>
 						<div class="option-container">
-							<div class="guide-option">
-								<div class="option-header">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										width="24"
-										height="24"
-										viewBox="0 0 32 32"
-										fill="#f3f3f3"
-									>
-										<circle
-											cx="16"
-											cy="16"
-											r="12"
-											stroke="#8a8a8a"
-											stroke-width="2.5"
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-dasharray="4 6"
-										/>
-									</svg>
-								</div>
-							</div>
-							<div class="guide-option-right">
-								Add a custom domain
-								<div class="option-details">
-									<p>
-										Your current domain is 222219.myshopify.com but you can add
-										a custom domain to help customers find your online store.
-										<a href="https://help.shopify.com/en/manual/domains"
-											>Learn more</a
-										>
-									</p>
-								</div>
-								<button class="option-button fontsize-12 fontweight-600">
-									Add domain
-								</button>
-							</div>
-						</div>
+                            <div class="option-header">
+                                <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                fill="#f3f3f3"
+                            >
+                                <circle
+                                    cx="16"
+                                    cy="16"
+                                    r="12"
+                                    stroke="#8a8a8a"
+                                    stroke-width="2.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-dasharray="4 6"
+                                />
+                            </svg>
+                            <p>Add a custom domain</p>
+                        </div>
+                        <div class="option-details">
+                            <p>
+                                Your current domain is 22219.myshopify.com but you can add a custom domain to help customers find your online store.
+                                <a
+                                    href="https://help.shopify.com/en/manual/domains"
+                                    >Learn more</a
+                                >
+                            </p>
+                            <button class="option-button fontsize-12 fontweight-600">
+                                Add domain
+                            </button>
+                        </div>
 					</li>
 					<li>
 						<div class="option-container">
-							<div class="guide-option">
-								<div class="option-header">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										width="24"
-										height="24"
-										viewBox="0 0 32 32"
-										fill="#f3f3f3"
-									>
-										<circle
-											cx="16"
-											cy="16"
-											r="12"
-											stroke="#8a8a8a"
-											stroke-width="2.5"
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-dasharray="4 6"
-										/>
-									</svg>
-								</div>
-							</div>
-							<div class="guide-option-right">
-								Name your store
-								<div class="option-details">
-									<p>
-										Your temporary store name is currently Davii collections.
-										The store name appears in your admin and your online store.
-										<a
-											href="https://help.shopify.com/en/manual/intro-to-shopify/initial-setup/setup-business-settings#set-or-change-your-online-store-name-and-legal-business-name"
-											>Learn more</a
-										>
-									</p>
-								</div>
-								<button class="option-button fontsize-12 fontweight-600">
-									Name store
-								</button>
-							</div>
-						</div>
+                            <div class="option-header">
+                                <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                fill="#f3f3f3"
+                            >
+                                <circle
+                                    cx="16"
+                                    cy="16"
+                                    r="12"
+                                    stroke="#8a8a8a"
+                                    stroke-width="2.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-dasharray="4 6"
+                                />
+                            </svg>
+                            <p>Name your store</p>
+                        </div>
+                        <div class="option-details">
+                            <p>
+                                Your temporary store name is currently Davii collections. The store name appears in your admin and your online store.
+                                <a
+                                    href="https://help.shopify.com/en/manual/intro-to-shopify/initial-setup/setup-business-settings#set-or-change-your-online-store-name-and-legal-business-name"
+                                    >Learn more</a
+                                >
+                            </p>
+                            <button class="option-button fontsize-12 fontweight-600">
+                                Name store
+                            </button>
+                        </div>
 					</li>
 					<li>
 						<div class="option-container">
-							<div class="guide-option">
-								<div class="option-header">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										width="24"
-										height="24"
-										viewBox="0 0 32 32"
-										fill="#f3f3f3"
-									>
-										<circle
-											cx="16"
-											cy="16"
-											r="12"
-											stroke="#8a8a8a"
-											stroke-width="2.5"
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											stroke-dasharray="4 6"
-										/>
-									</svg>
-								</div>
-							</div>
-							<div class="guide-option-right">
-								Setup up a payment provider
-								<div class="option-details">
-									<p>
-										Choose a payment provider to start accepting payments.
-										You'll need to create an account with the payment provider
-										and set it up with your Shopify store.
-										<a href="https://help.shopify.com/en/manual/payments"
-											>Learn more</a
-										>
-									</p>
-								</div>
-								<button class="option-button fontsize-12 fontweight-600">
-									Set up payment
-								</button>
-							</div>
-						</div>
+                            <div class="option-header">
+                                <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                fill="#f3f3f3"
+                            >
+                                <circle
+                                    cx="16"
+                                    cy="16"
+                                    r="12"
+                                    stroke="#8a8a8a"
+                                    stroke-width="2.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-dasharray="4 6"
+                                />
+                            </svg>
+                            <p>Set up a payment provider</p>
+                        </div>
+                        <div class="option-details">
+                            <p>
+                                Choose a payment provider to start accepting payments. You'll need to create an account with the payment provider and set it up with your Shopify store.
+                                <a
+                                    href="https://help.shopify.com/en/manual/payments"
+                                    >Learn more</a
+                                >
+                            </p>
+                            <button class="option-button fontsize-12 fontweight-600">
+                                Set up payment
+                            </button>
+                        </div>
 					</li>
 				</ul>
 			</div>
