--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="./app.css" />
+		<link rel="stylesheet" href="./app.min.css" />
 	</head>
 	<body>
 		<!-- HEADER SECTION -->
