Started menu that comes from DC button in upper right

--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
 					/>
 				</svg>
 			</div>
-			<div class="menu fontsize-12 fontweight-500">DC</div>
+			<div class="menu fontsize-12 fontweight-500">DC
+                <div class="menu-container">
+                    <ul>
+                        <li class="flex ai-center jc-space"><div class="flex ai-center"><div class="initials">DC</div><p class="fontsize-13 fontweight-600 collection">Davii Collections</p></div><img src="https://crushingit.tech/hackathon-assets/icon-arrow-down.svg" alt=""></li>
+                        <li class="flex"><img src="https://crushingit.tech/hackathon-assets/icon-store.svg" alt=""><p>All stores</p></li>
+                        <li>Help Center</li>
+                        <li>Changelog</li>
+                        <li>Community forums</li>
+                        <li>Hire a Shopify Partner</li>
+                        <li>Keyboard shortcuts</li>
+                        <li><p>David Micheal</p><p>davidmicheal@gmail.com</p></li>
+                        <li>Manage account</li>
+                        <li>Log out</li>
+                    </ul>
+                </div>
+            </div>
 		</header>
 		<!-- MAIN SECTION -->
 		<main>
