--- a/index.html
+++ b/index.html
@@ -57,16 +57,24 @@
 			<div class="menu fontsize-12 fontweight-500">DC
                 <div class="menu-container">
                     <ul>
-                        <li class="flex ai-center jc-space"><div class="flex ai-center"><div class="initials">DC</div><p class="fontsize-13 fontweight-600 collection">Davii Collections</p></div><img src="https://crushingit.tech/hackathon-assets/icon-arrow-down.svg" alt=""></li>
-                        <li class="flex"><img src="https://crushingit.tech/hackathon-assets/icon-store.svg" alt=""><p>All stores</p></li>
-                        <li>Help Center</li>
-                        <li>Changelog</li>
-                        <li>Community forums</li>
-                        <li>Hire a Shopify Partner</li>
-                        <li>Keyboard shortcuts</li>
-                        <li><p>David Micheal</p><p>davidmicheal@gmail.com</p></li>
-                        <li>Manage account</li>
-                        <li>Log out</li>
+                        <li>
+                            <div class="flex ai-center jc-space li-content background-highlighted">
+                                <div class="flex ai-center">
+                                    <div class="initials">DC</div>
+                                    <p class="fontsize-13 fontweight-600 collection">Davii Collections</p>
+                                </div>
+                                <img src="https://crushingit.tech/hackathon-assets/icon-arrow-down.svg" alt="">
+                            </div>
+                        </li>
+                        <li><div class="li-content flex ai-center"><img src="https://crushingit.tech/hackathon-assets/icon-store.svg" alt=""><p>All stores</p></div></li>
+                        <li class="li-separator"><p class="li-content">Help Center</p></li>
+                        <li><p class="li-content">Changelog</p></li>
+                        <li><p class="li-content">Community forums</p></li>
+                        <li><p class="li-content">Hire a Shopify Partner</p></li>
+                        <li><p class="li-content">Keyboard shortcuts</p></li>
+                        <li class="li-separator"><div  class="li-content"><p class="fontsize-13 fontweight-500">David Micheal</p><p class="email">davidmicheal@gmail.com</p></div></li>
+                        <li><p class="li-content">Manage account</p></li>
+                        <li><p class="li-content">Log out</p></li>
                     </ul>
                 </div>
             </div>
